using UnityEngine;
using UnityEngine.AI;
using System.Collections;

public class MonsterCtrl : MonoBehaviour
{
    // ìƒíƒœ ì—´ê±°í˜•
    public enum State { IDLE, TRACE, ATTACK, DIE }
    public State state = State.IDLE;

    private Transform monsterTr;
    private Transform playerTr;
    private NavMeshAgent agent;
    private Animator animator;

    // ì• ë‹ˆë©”ì´ì…˜ í•´ì‹œê°’
    private readonly int hashTrace = Animator.StringToHash("IsTrace");
    private readonly int hashAttack = Animator.StringToHash("IsAttack");
    private readonly int hashDie = Animator.StringToHash("Die");
    private readonly int hashPlayerDie = Animator.StringToHash("PlayerDie");
    private readonly int hashSpeed = Animator.StringToHash("Speed");

    [Header("Monster Settings")]
    public float traceDist = 10.0f;
    public float attackDist = 2.0f;
    private bool isDie = false;

    void Awake()
    {
        monsterTr = GetComponent<Transform>();
        agent = GetComponent<NavMeshAgent>();
        animator = GetComponent<Animator>();

        // í”Œë ˆì´ì–´ ì°¾ê¸° (ë³´ìŠ¤ ì”¬ ê¸°ì¤€)
        GameObject playerObj = GameObject.FindWithTag("PLAYER");
        if (playerObj != null) playerTr = playerObj.transform;
    }

    // ğŸš¨ [í•µì‹¬ ìˆ˜ì •] ì˜¤ë¸Œì íŠ¸ê°€ í™œì„±í™”ë  ë•Œë§ˆë‹¤ ì‹¤í–‰
    void OnEnable()
    {
        isDie = false;
        state = State.IDLE;

        // í”Œë ˆì´ì–´ ì‚¬ë§ ì´ë²¤íŠ¸ êµ¬ë…
        PlayerCtrl.OnPlayerDie += this.OnPlayerDie;

        StartCoroutine(CheckMonsterState());
        StartCoroutine(MonsterAction());
    }

    // ğŸš¨ [í•µì‹¬ ìˆ˜ì •] ì˜¤ë¸Œì íŠ¸ê°€ ë¹„í™œì„±í™”(í’€ì— íšŒìˆ˜)ë  ë•Œ ì‹¤í–‰
    void OnDisable()
    {
        // ğŸš¨ ì¤‘ìš”: ë°˜ë“œì‹œ ì´ë²¤íŠ¸ë¥¼ í•´ì œí•´ì•¼ MissingReferenceExceptionì´ ë°œìƒí•˜ì§€ ì•ŠìŠµë‹ˆë‹¤.
        PlayerCtrl.OnPlayerDie -= this.OnPlayerDie;
        StopAllCoroutines();
    }

    IEnumerator CheckMonsterState()
    {
        while (!isDie)
        {
            yield return new WaitForSeconds(0.3f);

            if (playerTr == null) continue;

            float distance = Vector3.Distance(playerTr.position, monsterTr.position);

            if (distance <= attackDist)
                state = State.ATTACK;
            else if (distance <= traceDist)
                state = State.TRACE;
            else
                state = State.IDLE;
        }
    }

    IEnumerator MonsterAction()
    {
        while (!isDie)
        {
            switch (state)
            {
                case State.IDLE:
                    agent.isStopped = true;
                    animator.SetBool(hashTrace, false);
                    break;
                case State.TRACE:
                    agent.SetDestination(playerTr.position);
                    agent.isStopped = false;
                    animator.SetBool(hashTrace, true);
                    animator.SetBool(hashAttack, false);
                    break;
                case State.ATTACK:
                    animator.SetBool(hashAttack, true);
                    break;
                case State.DIE:
                    isDie = true;
                    agent.isStopped = true;
                    animator.SetTrigger(hashDie);
                    GetComponent<CapsuleCollider>().enabled = false;
                    break;
            }
            yield return new WaitForSeconds(0.3f);
        }
    }

    // ğŸš¨ [ì—ëŸ¬ í•´ê²° ë²„ì „] í”Œë ˆì´ì–´ ì‚¬ë§ ì‹œ í˜¸ì¶œë˜ëŠ” í•¨ìˆ˜
    private void OnPlayerDie()
    {
        // 1. ìê¸° ìì‹ ì´ ì´ë¯¸ íŒŒê´´ë˜ì—ˆê±°ë‚˜ ë¹„í™œì„± ìƒíƒœì¸ì§€ í™•ì¸
        if (this == null || !gameObject.activeInHierarchy) return;

        // ëª¨ë“  í–‰ë™ ì¤‘ì§€
        StopAllCoroutines();
        if (agent != null && agent.enabled) agent.isStopped = true;

        // í”Œë ˆì´ì–´ì˜ ì£½ìŒì„ ë¹„ì›ƒëŠ”(?) ì• ë‹ˆë©”ì´ì…˜ ë“± ì—°ì¶œ
        animator.SetFloat(hashSpeed, UnityEngine.Random.Range(0.8f, 1.2f));
        animator.SetTrigger(hashPlayerDie);
    }
    // ğŸš¨ ì™„ì „íˆ íŒŒê´´ë  ë•Œë¥¼ ëŒ€ë¹„í•œ 2ì¤‘ ì•ˆì „ì¥ì¹˜
    void OnDestroy()
    {
        PlayerCtrl.OnPlayerDie -= this.OnPlayerDie;
    }
    // FireCtrlì—ì„œ ë³´ë‚´ëŠ” 2ê°œì˜ ì¸ì(Vector3, Vector3)ë¥¼ ë°›ë„ë¡ ìˆ˜ì •
    public void OnDamage(Vector3 pos, Vector3 normal)
    {
        if (isDie) return;

        Debug.Log($"ëª¬ìŠ¤í„° í”¼ê²©! ìœ„ì¹˜: {pos}");

        // í•„ìš”í•˜ë‹¤ë©´ ì—¬ê¸°ì„œ í”¼ê²© ì´í™íŠ¸(í˜ˆí” ë“±)ë¥¼ ìƒì„±í•  ìˆ˜ ìˆìŠµë‹ˆë‹¤.
        // CreateBloodEffect(pos, normal); 

        // í˜„ì¬ëŠ” í•œ ëŒ€ ë§ìœ¼ë©´ ë°”ë¡œ ì£½ëŠ” ë¡œì§
        Die();
    }

    // ì‚¬ë§ ë¡œì§
    private void Die()
    {
        if (isDie) return;

        isDie = true;
        state = State.DIE;

        if (agent != null) agent.isStopped = true;

        animator.SetTrigger(hashDie);

        // ë” ì´ìƒ ì´ì— ë§ì§€ ì•Šê²Œ ì½œë¼ì´ë” ë”
        GetComponent<CapsuleCollider>().enabled = false;

        Debug.Log("ë³´ìŠ¤ ëª¬ìŠ¤í„° ì‚¬ë§!");

        // 2ì´ˆ ë’¤ì— ë‹¤ì‹œ ì†Œí™˜ë  ìˆ˜ ìˆë„ë¡ í’€ë¡œ íšŒìˆ˜
        Invoke("ReturnToPool", 2.0f);
    }

    private void ReturnToPool()
    {
        // ë‹¤ì‹œ ì¼œì¤„ ê²ƒë“¤ ì •ë¦¬ (ì¬ì†Œí™˜ ëŒ€ë¹„)
        GetComponent<CapsuleCollider>().enabled = true;
        gameObject.SetActive(false);
    }
}